<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Joshua said:</string>
    <string name="app_name">Habit Tracker</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="habit_name">Habit Name</string>
    <string name="describe_your_habit">describe your habit</string>
    <string name="dateDisplayed"></string>
    <string name="add_habit">Add Habit</string>
    <string name="todo_today_coming_soon">TODO Today coming soon</string>
    <string name="viewHabitName">Habit Name</string>
    <string name="viewHabitDescription">Habit Description</string>
    <string name="viewHabitDate">Habit Date</string>
    <string name="viewHabitDays">Habit Days</string>
    <string name="deleteHabitButton">delete habit</string>
    <string name="last_completed_on">last completed on:</string>
    <string name="last_completion_date">never</string>
    <string name="view_completion_history">View Completion History</string>
    <string name="complete_habit">Complete Habit</string>
    <string name="completed_text">Completed:</string>
    <string name="timesText">times</string>
    <string name="completedNum">Num</string>
    <string name="hold_to_delete">Hold to Delete</string>

</resources>