<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.lonelytwitter.EditHabit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/viewHabitName"
        android:id="@+id/viewHabitName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@android:dimen/app_icon_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/viewHabitDescription"
        android:id="@+id/viewHabitNotes"
        android:layout_below="@+id/viewHabitName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/viewHabitDate"
        android:id="@+id/viewHabitDate"
        android:layout_below="@+id/viewHabitNotes"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/viewHabitDays"
        android:id="@+id/viewHabitDays"
        android:layout_below="@+id/viewHabitDate"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteHabitButton"
        android:id="@+id/deleteHabitButton"
        android:layout_above="@+id/viewCompletionButton"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/last_completed_on"
        android:id="@+id/lastCompletedText"
        android:layout_below="@+id/viewHabitDays"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/last_completion_date"
        android:id="@+id/lastCompletionDate"
        android:layout_below="@+id/lastCompletedText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="@android:dimen/thumbnail_height"
        android:text="@string/view_completion_history"
        android:id="@+id/viewCompletionButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="@android:dimen/thumbnail_height"
        android:text="@string/complete_habit"
        android:id="@+id/completeHabitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/completed_text"
        android:id="@+id/completedText"
        android:layout_below="@+id/lastCompletionDate"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/completedNum"
        android:id="@+id/completedNumber"
        android:layout_below="@+id/completedText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timesText"
        android:id="@+id/timesText"
        android:layout_below="@+id/completedNumber"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
